out/0197150f-0595-7252-8a69-0244809c1337/log_car_cv.txt
  File "\\?\D:\Project\Catch_Robot\Phytium-Car-STM32-Arm\car_cv.py", line 234
    match state:
          ^
SyntaxError: invalid syntax
